--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/
+    - chaton4Karasu.png
+    - clans-emotes.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
