--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   assets:
     - chaton4Karasu.png
     - clans-emotes.png
+    - "assets/"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
